<resources>
    <string name="app_name">HOŞGELDİNİZ</string>
    <string name="create_new_account">YENİ HESAP OLUŞTUR</string>
    <string name="I_have_account">HESABIM</string>
    <string name="username">Kullanıcı Adı:</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="login_with_account">Hesabınıza Giriş Yapınız</string>
    <string name="login">Giriş Yap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Çıkış</string>
</resources>
