<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarlogin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_below="@+id/actionbarlogin">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_account"
            android:layout_marginTop="10dp"
            android:layout_marginStart="4dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>


        <EditText
            android:id="@+id/txtEmaillogin"
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/txtPasswordlogin"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/black"/>
        <Button
            android:id="@+id/btnRegisterlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:background="@android:color/holo_red_light"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/black"/>


    </LinearLayout>
</RelativeLayout>