<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="25dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/message"
        android:layout_width="330dp"
        android:layout_height="278dp"
        android:layout_below="@+id/textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/mess" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:id="@+id/textview"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:layout_above="@+id/yenihesap"
        android:layout_marginBottom="7dp"
        android:id="@+id/hesabim"
        android:text="@string/I_have_account"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:id="@+id/yenihesap"
        android:background="@android:color/white"/>




</RelativeLayout>